prevent scroll bars on IE11/edge
SRFCMSAL-856

--- a/source/_patterns/30-organisms/modal/modal.scss
+++ b/source/_patterns/30-organisms/modal/modal.scss
@@ -17,7 +17,8 @@
   left: 0;
   width: 100%;
   max-height: 100%;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .modal-wrapper {
